tests/baselines/reference/importAttributes4.errors.txt
importAttributes4.ts(1,20): error TS2792: Cannot find module './first'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
importAttributes4.ts(1,34): error TS1005: '{' expected.


==== importAttributes4.ts (2 errors) ====
    import * as f from "./first" with
                       ~~~~~~~~~
!!! error TS2792: Cannot find module './first'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
                                     
!!! error TS1005: '{' expected.